[package]
name = "snek_reverse"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
eframe = "0.27"
egui_dock = "0.12.0"
log = "0.4"
rfd = "0.17.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
iced-x86 = "1.21"
regex = "1.11"

[build-dependencies]
cc = "1.0"
